## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

EXTRA_DIST = \
	core.h\
	core_users.h\
	types.h\
	inet.h\
	mysql.h\
	sched.h\
	server.h\
	misc.h\
	tasks.h\
	system.h\
	system.h\
	conf.h\
	license.h\
	log.h\
	plugin.h\
	collectors.h\
	libxml.h\
	store.h\
	func_squid.h\
	func_time.h\
	func_ip.h\
	threads.h\
	gtree.h\
	glist.h\
	gfunc.h
