## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall -DNDEBUG

#libdir = \
#	/usr/lib

lib_LTLIBRARIES = libipstat_collect_pppd.la

libipstat_collect_pppd_la_SOURCES = \
	main.c\
	../src/conf.c\
	../src/log.c\
	../src/inet.c\
	../src/libxml.c\
	../src/threads.c\
	../src/misc.c\
	../src/gfunc.c\
	../src/gtree.c\
	../src/glist.c

libipstat_collect_pppd_la_LDFLAGS = 

libipstat_collect_pppd_la_LIBADD = -lpthread
