## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall -DNDEBUG -ggdb

lib_LTLIBRARIES = libipstat_system.la

libipstat_system_la_SOURCES = \
	main.c\
	../src/conf.c\
	../src/log.c\
	../src/tasks.c\
	../src/misc.c\
	../src/gfunc.c

libipstat_system_la_LDFLAGS = 

libipstat_system_la_LIBADD =

