## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall -ggdb

sbin_PROGRAMS = redirector

redirector_SOURCES = \
	main.c\
	../src/conf.c\
	../src/gtree.c\
	../src/gfunc.c

redirector_LDFLAGS = 

redirector_LDADD = 

